--- a/inClass2/JsonAjax.html
+++ b/inClass2/JsonAjax.html
@@ -4,7 +4,7 @@
     <script>
       //change on the drop down
       function drpJSON() {
-        var data_file = "BookJson.json";
+        var data_file = "/inClass2/BookJson.json";
         var http_request = new XMLHttpRequest();
         try {
           // Opera 8.0+, Firefox, Chrome, Safari
@@ -33,8 +33,25 @@
             var Title = "";
             var Author = "";
             var extra = "";
-            for (var i = 0; i < jsonObj.book.length; i++) {}
-            console.log(selection + "using my code");
+            for (var i = 0; i < jsonObj.book.length; i++) {
+              if (
+                jsonObj.book[i].id ==
+                  document.getElementById("BookSel").value &&
+                document.getElementById("BookSel").value != 0
+              ) {
+                Title = Title + jsonObj.book[i].Title + "<br>";
+                Author = Author + jsonObj.book[i].Author + "<br>";
+                extra =
+                  extra +
+                  jsonObj.book[i].Publisher +
+                  "<p>" +
+                  jsonObj.book[i].desc +
+                  "</p>";
+                var selection = i;
+                console.log(i);
+              }
+            }
+            console.log(selection + " using my code");
             document.getElementById("booklist").innerHTML = extra;
             document.getElementById("Title").innerHTML = Title;
             document.getElementById("Author").innerHTML = Author;
@@ -45,7 +62,7 @@
       }
       //for the write in element
       function wrtJSON() {
-        var data_file = "BookJson.json";
+        var data_file = "/inClass2/BookJson.json";
         var http_request = new XMLHttpRequest();
 
         try {
@@ -75,7 +92,19 @@
             var Title = "";
             var Author = "";
 
-            for (var i = 0; i < jsonObj.book.length; i++) {}
+            for (var i = 0; i < jsonObj.book.length; i++) {
+              if (
+                jsonObj.book[i].Author.indexOf(
+                  document.getElementById("AuthorName").value
+                ) > -1 &&
+                document.getElementById("AuthorName").value != ""
+              ) {
+                Title = Title + jsonObj.book[i].Title + "<br>";
+                Author = Author + jsonObj.book[i].Author + "<br>";
+                var selection = i;
+                console.log(i);
+              }
+            }
             console.log(selection + "Using my code");
             document.getElementById("booklist").innerHTML = "";
             document.getElementById("Title").innerHTML = Title;
@@ -87,6 +116,7 @@
       }
     </script>
     <title>JSON Using AJAX</title>
+    <link type="text/css" rel="stylesheet" href="/inClass2/JSON.css" />
   </head>
   <body>
     <h1>Book Details</h1>
@@ -119,7 +149,7 @@
     </table>
 
     <script>
-      var data_file = "BookJson.json";
+      var data_file = "/inClass2/BookJson.json";
       var http_request = new XMLHttpRequest();
 
       try {
@@ -147,7 +177,7 @@
             text =
               text +
               "<option value= '" +
-              jsonObj.book[i].authorid +
+              jsonObj.book[i].id +
               "'>" +
               jsonObj.book[i].Title +
               "</option>";
