--- a/inClass3/bookCarousel.html
+++ b/inClass3/bookCarousel.html
@@ -1,4 +1,3 @@
-
 <html>
   <head>
     <script type="text/javascript" src="jquery.js"></script>
@@ -17,9 +16,9 @@
               html +=
                 '<p onclick="bookinfo(' +
                 stuff.id +
-                ')"><img src="' +
+                ')"style="position: relative;"><img src="' +
                 stuff.Source +
-                '" style="max-width:100%; max-height:100%;"></p></div>';
+                '"style="max-width:100%; max-height:100%;"></p></div>';
             });
           });
           $("#books").html(html);
@@ -42,7 +41,7 @@
   <body>
     <div id="main">Books Carousel</div>
     <div>
-      <table style="width:500px">
+      <table style="width:650px">
         <tr style="height: auto">
           <td><a href="#" id="prev">Previous</a></td>
           <td style="width: 300px; height: auto"><div id="books"></div></td>
