--- a/Carousel/carousel.html
+++ b/Carousel/carousel.html
@@ -4,6 +4,7 @@
     <script type="text/javascript" src="/Carousel/jquery-cycle-all.js"></script>
     <script type="text/javascript" src="/Carousel/carousel.js"></script>
     <script type="text/javascript">
+      //Builds carousel and pulls details from JSON file
       var html = "";
       $(document).ready(function() {
         $.getJSON("six-things.json", function(data) {
@@ -18,9 +19,10 @@
                 stuff.id +
                 ')"style="position: relative;"><img src="' +
                 stuff.Image +
-                '"style="width:350px; height:250px; border: solid 4px black;"></p></div>';
+                '"style="width:400px; height:300px; border: solid 4px black;"></p></div>';
             });
           });
+          //Timer and speed of Previous and Next buttons
           $("#things").html(html);
           $("#things").cycle({
             fx: "fade",
@@ -41,6 +43,7 @@
   <body>
     <div id="main">Carousel of Things I Like To Do</div>
     <div>
+      <!--Table that holds buttons, images, and titles above images-->
       <table style="width:650px">
         <tr style="height: auto">
           <td><a href="#" id="prev">Previous</a></td>
@@ -49,6 +52,7 @@
         </tr>
       </table>
     </div>
+    <!--Description display for each image when clicked-->
     <div id="information">
       <figure>
         <figcaption></figcaption>
