added some styling for bootstrap glyphicons and adjusted options in nav bar. Ready for submission.

--- a/AdvancedJQuery/contact.html
+++ b/AdvancedJQuery/contact.html
@@ -46,6 +46,8 @@ and open the template in the editor.
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="welcome.html">Home</a></li>
+            <li class="vertical-pipe"></li>
             <li><a href="about.html">About</a></li>
             <li class="vertical-pipe"></li>
             <li><a href="services.html">Services</a></li>
@@ -62,10 +64,8 @@ and open the template in the editor.
         <h1>Contact Us</h1>
         <div style="font-size: 15px;">
           <p>Dark Horse Investigations, Inc.</p>
-          <p>89 Winchester Street</p>
           <p>Lebanon, KS 66952</p>
-          <p>tel: 785.123.4567</p>
-          <p>fax: 785.123.4567</p>
+          <p>785-123-4567</p>
           <p>info@darkhorseinvestigations.com</p>
         </div>
       </div>
