--- a/AdvancedJQuery/about.html
+++ b/AdvancedJQuery/about.html
@@ -47,6 +47,8 @@ and open the template in the editor.
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="welcome.html">Home</a></li>
+            <li class="vertical-pipe"></li>
             <li><a href="about.html">About</a></li>
             <li class="vertical-pipe"></li>
             <li><a href="services.html">Services</a></li>
