--- a/inClass9/AnimateExclean.html
+++ b/inClass9/AnimateExclean.html
@@ -9,6 +9,8 @@ and open the template in the editor.
     <title>JQuery Animation Examples</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/inClass9/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="/inClass5/jquery.min.js"></script>
     <script>
       $(document).ready(function() {
@@ -49,51 +51,94 @@ and open the template in the editor.
       });
     </script>
 
+    <!---->
     <style>
       #panel,
       #flip {
         padding: 5px;
         text-align: center;
-        background-color: #e5eecc;
-        border: solid 1px #c3c3c3;
       }
 
       #panel {
         padding: 50px;
         display: none;
       }
+
+      .container-fluid {
+        padding-top: 15px;
+        padding-bottom: 325px;
+      }
+
+      .bg-1 {
+        background-color: khaki;
+        font-size: 20px;
+        font-weight: bold;
+        color: #e45656;
+      }
+
+      .bg-2 {
+        background-color: khaki;
+        font-size: 15px;
+      }
+
+      .bg-3 {
+        background-color: black;
+        color: whitesmoke;
+      }
+
+      .btn {
+        margin-top: 20px;
+        padding: 0px 25px;
+      }
     </style>
   </head>
   <body>
-    <div id="flip">Click here to log in</div>
-    <div id="panel">
+    <div class="bg-1" id="flip">
+      Click Here to Log In
+    </div>
+    <div class="bg-2 col-md-6 text-center" id="panel">
       <form name="form1" method="post" action="#">
-        <table
-          width="100%"
-          border="0"
-          cellpadding="3"
-          cellspacing="1"
-          bgcolor="#FFFFFF"
-        >
+        <table width="100%" border="0" cellpadding="3" cellspacing="1">
           <tr>
-            <td colspan="3"><strong>Member Login </strong></td>
+            <td style="font-size: 20px" colspan="3">
+              <strong>Member Login </strong>
+            </td>
           </tr>
           <tr>
             <td width="78">Username</td>
             <td width="6">:</td>
             <td width="294">
-              <input name="myusername" type="text" id="myusername" />
+              <input
+                class="form-control"
+                name="myusername"
+                type="text"
+                id="myusername"
+              />
             </td>
           </tr>
           <tr>
             <td>Password</td>
             <td>:</td>
-            <td><input name="mypassword" type="password" id="mypassword" /></td>
+            <td>
+              <input
+                class="form-control"
+                name="mypassword"
+                type="password"
+                id="mypassword"
+              />
+            </td>
           </tr>
           <tr>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
-            <td><input type="submit" name="Submit" value="Login" /></td>
+            <td>
+              <input
+                class="btn btn-danger btn-lg"
+                type="submit"
+                name="Submit"
+                value="Login"
+              />
+            </td>
           </tr>
 
           <tr>
@@ -104,18 +149,31 @@ and open the template in the editor.
         </table>
       </form>
     </div>
-    <div>
+    <div class="container-fluid bg-3 text-center">
       <h1>Rollover Images</h1>
       <p>Mouse over the images below</p>
       <div id="Gallery">
         <a href="img/tie.jpg">
-          <img src="img/tie.jpg" width="140" height="140" alt="Tie" />
+          <img
+            class="img-circle"
+            src="img/tie.jpg"
+            width="140"
+            height="140"
+            alt="Tie"
+          />
         </a>
         <a href="img/vader.jpg">
-          <img src="img/vader.jpg" width="140" height="140" alt="Tie" />
+          <img
+            class="img-circle"
+            src="img/vader.jpg"
+            width="140"
+            height="140"
+            alt="Tie"
+          />
         </a>
         <a href="img/millenniumfalcon.jpg">
           <img
+            class="img-circle"
             src="img/millenniumfalcon.jpg"
             width="140"
             height="140"
@@ -123,7 +181,13 @@ and open the template in the editor.
           />
         </a>
         <a href="img/xwing.jpg">
-          <img src="img/xwing.jpg" width="140" height="140" alt="Tie" />
+          <img
+            class="img-circle"
+            src="img/xwing.jpg"
+            width="140"
+            height="140"
+            alt="Tie"
+          />
         </a>
       </div>
       <div id="ship"></div>
