finalized exercise and added jquery file used from previous project

--- a/inClass10/class10.html
+++ b/inClass10/class10.html
@@ -212,7 +212,7 @@
           </footer>
     </div>
 
-    <!--<script src="js/jquery-1.11.3.js"></script>-->
+   <script src="/inClass10/jquery-1.11.0.min.js"></script>
     <script src="/inClass10/bootstrap/js/bootstrap.js"></script>
   </body>
 </html>
