added photo and made adjustments to the styling. Ready for submission.

--- a/BootstrapSite/bootstrap.html
+++ b/BootstrapSite/bootstrap.html
@@ -19,10 +19,11 @@
         <div class="jumbotron text-center" style="background-color: lightgreen; color: white; margin-bottom: 0px;">
         <h2>Sample Web Page</h2>
         <img
+            class="img-circle"
             alt="Brief description" 
             title="title=&#34;Text to show when mouse is hovered over this image&#34;"
             src="picture-of-something.jpg"
-            style="width:100%;">
+            style="width:20%;">
         <br>
         <span style="font-size:84%">
             <i>A random photo.</i>
@@ -228,7 +229,7 @@ This sentence contains &lt;b&gt;bold&lt;/b&gt; text.
             <hr>
         <p>
         <blockquote>
-            <table border>
+            <table style="background-color: lightgrey;" class="table-striped table-hover" border>
                 <tr>
                     <td><span class="tt">&amp;auml;</span>
                     <td>a-umlaut
