--- a/inClass11/class11.html
+++ b/inClass11/class11.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!--
 To change this license header, choose License Headers in Project Properties.
@@ -9,15 +8,59 @@ and open the template in the editor.
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Mobil App Demo</title>
+        <title>Mobile App Demo</title>
         <link href="/inClass11/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="/inClass11/normalize.css" rel="stylesheet" type="text/css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script src="inClass11/bootstrap/js/bootstrap.min.js"></script>
+        <script src="/inClass11/bootstrap/js/bootstrap.min.js"></script>
         <script>
             $(document).ready(function () {
-                // add code here
+              var $charCount, maxCharCount;
+
+              $charCount = $('#tweet-modal .char-count')
+              maxCharCount = parseInt($charCount.data('max'), 10);
+
+              $('#tweet-modal textarea').on('keyup', function(e) {
+              var tweetLength = $(e.currentTarget).val().length;
+
+              $charCount.html(maxCharCount - tweetLength);
+              });
+
+            $('[data-toggle="tooltip"]').tooltip();
+
+
+            var popoverContentTemplate = '' +
+              '<img src="imgs/breed.jpg" class="img-rounded">' +
+              '<div class="info">' +
+              '<strong>Dog Breeds</strong>' +
+              '<a href="#" class="btn btn-default">' +
+                '<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>' +
+                'Follow' +
+              '</a>' +
+              '</div>';
+
+            $('[data-toggle="popover"]').popover({
+              placement: 'bottom',
+              html: true,
+              content: function() {
+              return popoverContentTemplate;
+              }    
+            });
                 
+            $('[data-toggle="popover"]').on('show.bs.popover', function() {
+        var $icon = $(this).find('span.glyphicon');
+
+        $icon.removeClass('glyphicon-plus').addClass('glyphicon-ok');
+        $(this).append('ing');
+    });
+
+    $('#profile').on('affix.bs.affix', function() {
+        $(this).width($(this).width() - 1);
+        $('#main').addClass('col-md-offset-3');
+    }).on('affix-top.bs.affix', function() {
+        $(this).css('width', '');
+        $('#main').removeClass('col-md-offset-3');
+    });
             });
 
         </script>
@@ -259,8 +302,51 @@ and open the template in the editor.
             }
 
             div#who-follow li .info .glyphicon {
-                color: #2F92CA;
+              color: #2F92CA;
             }
+
+            div#who-follow li .info .glyphicon-ok {
+              color: #5cb85c;
+            }
+
+            #messages-modal .btn-message {
+              position: absolute;
+              right: 3em;
+              top: 0.75em;
+            }
+
+            #messages-modal .modal-body {
+  max-height: 32rem;
+  overflow: auto;
+}
+
+#messages-modal li {
+  padding: 0.75rem;
+  border-bottom: 0.1rem solid #E6E6E6;
+}
+
+#messages-modal li:hover {
+  background-color: #E6E6E6;
+}
+
+#messages-modal li a:hover {
+  text-decoration: none;
+}
+
+#messages-modal li img {
+  max-width: 15%;
+}
+
+#messages-modal .msg-content {
+  display: inline-block;
+  color: #000;
+}
+
+#messages-modal .msg-content h5 {
+  font-size: 1em;
+  font-weight: bold;
+}
+
             
         </style>
     </head>
@@ -276,7 +362,7 @@ and open the template in the editor.
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <button id="tweet" class="btn btn-default pull-right visible-xs-block" >
+                <button id="tweet" class="btn btn-default pull-right visible-xs-block" data-toggle="modal" data-target="#tweet-modal">
                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                     Tweet
                 </button>
@@ -299,7 +385,7 @@ and open the template in the editor.
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#" role="button" data-toggle="modal" data-target="#messages-modal">
                             <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
                             Messages
                         </a>
@@ -344,7 +430,7 @@ and open the template in the editor.
     <body>
         <div class="container">
             <div class="row">
-                <div id="profile" class="col-md-3 hidden-sm hidden-xs">
+                <div id="profile" class="col-md-3 hidden-sm hidden-xs" data-spy="affix" data-offset-top="0">
                     <div id="profile-resume" class="card">
                         <img class="card-img-top img-responsive" src="/inClass11/img/landscape.jpg">
                         <div class="card-block">
@@ -386,7 +472,7 @@ and open the template in the editor.
                                         <a href="#" class="thumbnail"><img class="img-responsive" src="/inClass11/img/landscape-04.jpg"></a>
                                     </li>
                                     <li>
-                                        <a href="#" class="thumbnail"><img class="img-responsive" src="/inClass11/img/andscape-05.jpg"></a>
+                                        <a href="#" class="thumbnail"><img class="img-responsive" src="/inClass11/img/landscape-05.jpg"></a>
                                     </li>
                                 </ul>
                             </div>
@@ -416,14 +502,14 @@ and open the template in the editor.
                                     <p> The Cake is a Lie!</p>
                                 </div>
                                 <div class="action-list">
-                                    <a href="#">
+                                    <a href="#" data-toggle="tooltip" data-placement="bottom" title="Reply">
                                         <span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>
                                     </a>
-                                    <a href="#">
+                                    <a href="#" data-toggle="tooltip" data-placement="bottom" title="Retweet">
                                         <span class="glyphicon glyphicon-refresh " aria-hidden="true"></span>
                                         <span class="retweet-count">6</span>
                                     </a>
-                                    <a href="#">
+                                    <a href="#" data-toggle="tooltip" data-placement="bottom" title="Start">
                                         <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
                                     </a>
                                 </div>
@@ -453,18 +539,18 @@ and open the template in the editor.
                                     <img src="/inClass11/img/cat.jpg" class="img-rounded">
                                     <div class="info">
                                         <strong>Crazy cats</strong>
-                                        <button class="btn btn-default">
+                                        <a href="#" role="button" tabindex="-1" class="btn btn-default" data-toggle="popover" data-trigger="focus" title="You may want to follow">
                                             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Follow
-                                        </button>
+                                        </a>
                                     </div>
                                 </li>
                                 <li>
                                     <img src="/inClass11/img/ration.jpg" class="img-rounded">
                                     <div class="info">
                                         <strong>Free ration alert</strong>
-                                        <button class="btn btn-default">
+                                        <a href="#" role="button" tabindex="-1" class="btn btn-default" data-toggle="popover" data-trigger="focus" title="You may want to follow">
                                             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Follow
-                                        </button>
+                                        </a>
                                     </div>
                                 </li>
                             </ul>
@@ -482,12 +568,15 @@ and open the template in the editor.
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    <h4 class="modal-title">Modal title</h4>
+                    <h4 class="modal-title">Dog a new tweet</h4>
                 </div>
                 <div class="modal-body">
-                    Modal content
+                  <div class="row">
+                    <textarea class="form-control" rows="4" placeholder="What you want to bark?" maxlength="140"></textarea>
+                  </div>
                 </div>
                 <div class="modal-footer">
+                    <span class="char-count pull-left" data-max="140">140</span>
                     <button type="button" class="btn btn-default" data-dismiss="modal">
                         Close
                     </button>
@@ -498,4 +587,58 @@ and open the template in the editor.
             </div>
         </div>
     </div>
+
+    <div id="messages-modal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+              <h4 class="modal-title">Dog messages</h4>
+              <button type="button" class="btn btn-primary btn-message">New message</button>
+            </div>
+            <div class="modal-body">
+                <ul class="list-unstyled">
+                    <li>
+                      <a href="#">
+                        <img src="/inClass11/img/laika.jpg" class="img-circle">
+                        <div class="msg-content">
+                          <h5>Laika <small>@spacesog</small></h5>
+                          <p>Hey Jonny, how is down there?</p>
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <img src="/inClass11/img/doge.jpg" class="img-circle">
+                        <div class="msg-content">
+                          <h5>Doge <small>@dogeoficial </small></h5>
+                          <p>Wow! How did I turned in to a meme?</p>
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <img src="/inClass11/img/cat.jpg" class="img-circle">
+                        <div class="msg-content">
+                          <h5>Cat <small>@crazycat</small></h5>
+                          <p>You will never catch me!</p>
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <img src="/inClass11/img/laika.jpg" class="img-circle">
+                        <div class="msg-content">
+                          <h5>Laika <small>@spacesog</small></h5>
+                          <p>I think I saw you in Jupiter! Have you been there recently?</p>
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+            </div>
+          </div>
+        </div>
+      </div>
 </html>
