--- a/MVCMobile/mobile.html
+++ b/MVCMobile/mobile.html
@@ -7,7 +7,10 @@
         <title>Sample Web Page</title>
         <META http-equiv="Content-Type" content="text/html; charset=utf-8">
         <META name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="stylesheet" href="/BootstrapSite/bootstrap/css/bootstrap.css" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="/BootstrapSite/bootstrap/css/bootstrap.css" />
         <style>
             .tt { font-family:monospace }
             .example { font-family:monospace; white-space:pre; overflow-x:auto; }
@@ -15,15 +18,41 @@
     </head>
 
     <body>
+            <nav class="navbar navbar-inverse">
+                    <div class="container-fluid">
+                      <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span> 
+                        </button>
+                        <a class="navbar-brand" href="#">Sample Web Page</a>
+                      </div>
+                      <div class="collapse navbar-collapse" id="myNavbar">
+                        <ul class="nav navbar-nav">
+                          <li class="active"><a href="#contents">Contents</a></li>
+                          <li><a href="#basics">Section 1</a></li>
+                          <li><a href="#syntax">Section 2</a></li> 
+                          <li><a href="#chars">Section 3</a></li>
+                          <li><a href="#convert">Section 4</a></li> 
+                          <li><a href="#effects">Section 5</a></li> 
+                          <li><a href="#lists">Section 6</a></li> 
+                          <li><a href="#links">Section 7</a></li> 
+                          <li><a href="#tables">Section 8</a></li> 
+                          <li><a href="#install">Section 9</a></li> 
+                          <li><a href="#more">Section 10</a></li> 
+                        </ul>
+                      </div>
+                    </div>
+                  </nav>
         <!-- style="width:100%; max-width:720px" -->
         <div class="jumbotron text-center" style="background-color: lightgreen; color: white; margin-bottom: 0px;">
-        <h2>Sample Web Page</h2>
         <img
-            class="img-circle"
+            class="img-circle img-responsive"
             alt="Brief description" 
             title="title=&#34;Text to show when mouse is hovered over this image&#34;"
             src="picture-of-something.jpg"
-            style="width:20%;">
+            style="width:20%; display: inline-block;">
         <br>
         <span style="font-size:84%">
             <i>A random photo.</i>
